--- a/.hintrc
+++ b/.hintrc
@@ -36,6 +36,13 @@
       {
         "frame-title": "off"
       }
-    ]
+    ],
+    "axe/structure": [
+      "default",
+      {
+        "list": "off"
+      }
+    ],
+    "disown-opener": "off"
   }
 }
